# Weekly-Self-Learning

./: .gitignore  README.md  SETUP.md  pyproject.toml
scripts/: new_week.sh
templates/: concept.md  notes.md  plan.md  progress.md  requirements.txt  verify.md  week-README.md
week-00-setup/: README.md  notes.md  requirements.txt
week-00-setup/src/: verify_env.py
week-01-transformer-foundations/: README.md  concept.md  notes.md  plan.md  progress.md  requirements.txt  verify.md
week-01-transformer-foundations/src/: attention.py  tokenizers_compare.py
